# 3rd_imdc_rki_rki_zki_ph_chronos

./: .gitignore  notebook.ipynb
chronos_model/: README.md  _nb.ipynb  basemodel.py  chronosmodel.py  pathmanager.py
data_catalog/: pyproject.toml
models/XGboost/: data_processing.py  grid_search.py  pipeline.py  pyproject.toml  results_exploration.ipynb
models/chronos/: __init__.py  _nb.ipynb  basemodel.py  chronosmodel.py  datasets.py  pathmanager.py  predictions.py
models/lstm_geo/: experiments.yaml  requirements.txt  results.csv  run_experiments.py
models/lstm_geo/scripts/: evaluator.py  lstm.py  lstm_geo_experiment.py
notebooks/: data_cleaning.ipynb
submissions/chronos_univariate/: test_1_2022.csv  test_2_2023.csv  test_3_2024.csv  test_4_2025.csv
submissions/lstm_geo/: test_1_2022.csv  test_2_2023.csv  test_3_2024.csv  test_4_2025.csv
submissions/xgboost/: test_1_2022.csv  test_2_2023.csv  test_3_2024.csv  test_4_2025.csv
